Add new entities for gallery, gallery items, and pages. Make page administration work

--- a/ClozerWoods/Views/SubGate/Dashboard.cshtml
+++ b/ClozerWoods/Views/SubGate/Dashboard.cshtml
@@ -1,6 +1,4 @@
 ﻿@{
-    ViewData["Title"] = "Sub-Gate Dashboard";
+    Layout = "../Shared/_DashboardLayout.cshtml";
+    ViewData["Title"] = "Dashboard";
 }
-
-<h1>Clozer Woods Sub-Gate</h1>
-<p>Dashboard</p>
