--- a/ClozerWoods/Views/Shared/_Layout.cshtml
+++ b/ClozerWoods/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!doctype html>
+﻿@using ClozerWoods.Models.MainGate
+@model SharedViewModel
+
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -8,23 +11,30 @@
     <link rel="stylesheet" href="~/ClozerWoods.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a asp-area="" asp-controller="MainGate" asp-action="Index">Home</a>
-                    <a asp-area="" asp-controller="MainGate" asp-action="Garden">Garden</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    @if(Model.PublishedPages != null && Model.PublishedPages.Any()) {
+        <header>
+            <nav>
+                <ul>
+                    <li><a asp-area="" asp-controller="MainGate" asp-action="Index">Home</a></li>
+                    @foreach(var p in Model.PublishedPages!) {
+                        <li><a asp-area="" asp-controller="MainGate" asp-action="Page">@p.Title</a></li>
+                    }
+                    <li>|</li>
+                    <li><a asp-area="" asp-controller="SubGate" asp-action="Dashboard">Dashboard</a></li>
+                </ul>
+            </nav>
+        </header>
+    }
 
     <main>
         @RenderBody()
+        <div class="clear"></div>
     </main>
 
     <footer>
         &copy; 2022 - Clozer Woods
     </footer>
+
+    @RenderSection("scripts", false)
 </body>
 </html>
