Add gallery editing functionality

--- a/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
+++ b/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
@@ -6,7 +6,7 @@
 <aside>
     <ul>
         <li><a asp-area="" asp-controller="SubGate" asp-action="EditPage">Pages</a></li>
-        <li><a asp-area="" asp-controller="SubGate" asp-action="EditGalleries">Galleries</a></li>
+        <li><a asp-area="" asp-controller="SubGate" asp-action="EditGallery">Galleries</a></li>
         <li><a asp-area="" asp-controller="SubGate" asp-action="EditGalleryItems">All Gallery Items</a></li>
     </ul>
 </aside>
