--- a/ClozerWoods/Views/SubGate/Dashboard.cshtml
+++ b/ClozerWoods/Views/SubGate/Dashboard.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ClozerWoods.Models.ViewModels
+@model SharedViewModel
+@{
     Layout = "../Shared/_DashboardLayout.cshtml";
     ViewData["Title"] = "Dashboard";
 }
