--- a/ClozerWoods/Views/SubGate/EditPage.cshtml
+++ b/ClozerWoods/Views/SubGate/EditPage.cshtml
@@ -1,5 +1,5 @@
-﻿@using ClozerWoods.Models.SubGate;
-@model PagesViewModel
+﻿@using ClozerWoods.Models.ViewModels.SubGate
+@model PageViewModel
 @{
     Layout = "../Shared/_DashboardLayout.cshtml";
     ViewData["Title"] = "Edit Page";
