Abstract common javascript function

--- a/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
+++ b/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
@@ -14,5 +14,6 @@
 @RenderBody()
 
 @section scripts {
+    <script src="~/js/main.js" asp-append-version="true"></script>
     @RenderSection("scripts", false)
 }
