--- a/ClozerWoods/Views/MainGate/Login.cshtml
+++ b/ClozerWoods/Views/MainGate/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Clozer Woods Sub-Gate</h1>
-<form method="post" asp-controller="SubGate" asp-action="Login">
+<form method="post" asp-controller="MainGate" asp-action="Login">
     <label for="username">Username</label>
     <input type="text" name="username" />
     <label for="password">Password</label>
