--- a/ClozerWoods/Views/Shared/_Layout.cshtml
+++ b/ClozerWoods/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                         <li><a asp-area="" asp-controller="MainGate" asp-action="Page">@p.Title</a></li>
                     }
                     <li>|</li>
-                    <li><a asp-area="" asp-controller="SubGate" asp-action="Dashboard">Dashboard</a></li>
+                    <li><a asp-area="" asp-controller="MainGate" asp-action="Dashboard">Dashboard</a></li>
                 </ul>
             </nav>
         </header>
