--- a/ClozerWoods/Views/MainGate/EditGallery.cshtml
+++ b/ClozerWoods/Views/MainGate/EditGallery.cshtml
@@ -1,4 +1,4 @@
-﻿@using ClozerWoods.Models.ViewModels.SubGate
+﻿@using ClozerWoods.Models.ViewModels.MainGate
 @model GalleryViewModel
 @{
     Layout = "../Shared/_DashboardLayout.cshtml";
@@ -13,10 +13,10 @@
     </script>
 }
 
-<form method="post" asp-controller="SubGate" asp-action="EditGallery">
-    @if(Model.GalleryListItems!.Any()) {
+<form method="post" asp-controller="MainGate" asp-action="EditGallery">
+    @if(Model.GalleryList!.Any()) {
         <label for="id">Gallery</label>
-        <select name="galleryId" id="galleryId" asp-items="Model.GalleryListItems"></select>
+        <select name="galleryId" id="galleryId" asp-items="Model.GalleryList"></select>
     }
     <label for="title">Title</label>
     <input type="text" name="title" value="@Model.SelectedGallery!.Title" />
