--- a/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
+++ b/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
@@ -2,12 +2,12 @@
     Layout = "_Layout.cshtml";
 }
 
-<h1>Clozer Woods Sub-Gate - @ViewData["Title"]</h1>
+<h1>Clozer Woods Main Gate - @ViewData["Title"]</h1>
 <aside class="rounded">
     <ul>
-        <li><a asp-area="" asp-controller="SubGate" asp-action="EditPage">Pages</a></li>
-        <li><a asp-area="" asp-controller="SubGate" asp-action="EditGallery">Galleries</a></li>
-        <li><a asp-area="" asp-controller="SubGate" asp-action="EditGalleryItems">All Gallery Items</a></li>
+        <li><a asp-area="" asp-controller="MainGate" asp-action="EditPage">Pages</a></li>
+        <li><a asp-area="" asp-controller="MainGate" asp-action="EditGallery">Galleries</a></li>
+        <li><a asp-area="" asp-controller="MainGate" asp-action="EditMediaItems">Media Items</a></li>
     </ul>
 </aside>
 
