--- a/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
+++ b/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
@@ -7,7 +7,7 @@
     <ul>
         <li><a asp-area="" asp-controller="MainGate" asp-action="EditPage">Pages</a></li>
         <li><a asp-area="" asp-controller="MainGate" asp-action="EditGallery">Galleries</a></li>
-        <li><a asp-area="" asp-controller="MainGate" asp-action="EditMediaItems">Media Items</a></li>
+        <li><a asp-area="" asp-controller="MainGate" asp-action="EditMediaItem">Media Items</a></li>
     </ul>
 </aside>
 
