--- a/ClozerWoods/Views/MainGate/EditMediaItem.cshtml
+++ b/ClozerWoods/Views/MainGate/EditMediaItem.cshtml
@@ -1,1 +1,65 @@
-﻿
+﻿@using ClozerWoods.Models.ViewModels.MainGate
+@model MediaItemsViewModel
+@{
+    Layout = "../Shared/_DashboardLayout.cshtml";
+    ViewData["Title"] = "Edit Media Item";
+}
+
+@section scripts {
+    <script type="text/javascript">
+        window.onload = () => {
+            attachItemSwitchEvent('mediaItemId');
+
+            document.querySelector('#selectedFile').onchange = function() {
+                const container = document.querySelector('#forceUniqueNameContainer');
+                const clear = document.querySelector('#clearSelectedFile');
+                if(this.value !== '') {
+                    container.style.display = 'block';
+                    clear.style.display = 'inline-block';
+                } else {
+                    container.style.display = 'none';
+                }
+            }
+
+            document.querySelector('#clearSelectedFile').onclick = function() {
+                document.querySelector('#selectedFile').value = '';
+                this.style.display = 'none';
+            }
+        }
+    </script>
+}
+
+<form method="post" asp-controller="MainGate" asp-action="EditMediaItem" enctype="multipart/form-data">
+    @if(Model.MediaItemList!.Any()) {
+        <label for="mediaItemId">Media Item</label>
+        <select name="mediaItemId" id="mediaItemId" asp-items="Model.MediaItemList"></select>
+    }
+
+    @if(Model.SelectedMediaItem.FileName == null) {
+        <input type="hidden" name="hasExistingFile" value="false">
+    } else {
+        <input type="hidden" name="hasExistingFile" value="true">
+        <p>@Model.SelectedMediaItem.FileName</p>
+    }
+    <label for="selectedFile">File</label>
+    <span id="clearSelectedFile" style="display: none;">(<a href="#">clear</a>)</span>
+    <input type="file" name="selectedFile" id="selectedFile" />
+    
+    <div id="forceUniqueNameContainer" style="display: none;">
+        <label for="forceUniqueName">Force Unique Name</label>
+        <input type="checkbox" name="forceUniqueName" />
+    </div>
+
+    @if(Model.GalleryList!.Any()) {
+        <label for="galleryId">Gallery</label>
+        <select name="galleryId" asp-items="Model.GalleryList"></select>
+    }
+
+    <label for="title">Title</label>
+    <input type="text" name="title" value="@Model.SelectedMediaItem!.Title" />
+
+    <label for="description">Description</label>
+    <input type="text" name="description" value="@Model.SelectedMediaItem!.Description" />
+
+    <input type="submit" name="submit" value="Save" /> 
+</form>
