Disable hot reload and remove CSS link that doens't exist anymore

--- a/ClozerWoods/Views/Shared/_Layout.cshtml
+++ b/ClozerWoods/Views/Shared/_Layout.cshtml
@@ -4,11 +4,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"] - ClozerWoods</title>
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/ClozerWoods.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
+    <link rel="icon" href="data:,">
 </head>
 <body>
     @if(Model.PublishedPages != null && Model.PublishedPages.Any()) {
