--- a/ClozerWoods/Views/Shared/_Layout.cshtml
+++ b/ClozerWoods/Views/Shared/_Layout.cshtml
@@ -15,9 +15,9 @@
         <header class="rounded">
             <nav>
                 <ul>
-                    <li><a asp-area="" asp-controller="MainGate" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Public" asp-action="Index">Home</a></li>
                     @foreach(var p in Model.PublishedPages!) {
-                        <li><a asp-area="" asp-controller="MainGate" asp-action="Page">@p.Title</a></li>
+                        <li><a asp-area="" asp-controller="Public" asp-action="Page" asp-route-stub="@p.Stub">@p.Title</a></li>
                     }
                     <li>|</li>
                     <li><a asp-area="" asp-controller="MainGate" asp-action="Dashboard">Dashboard</a></li>
