--- a/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
+++ b/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
@@ -6,7 +6,7 @@
 <aside class="rounded">
     <ul>
         <li><a asp-area="" asp-controller="MainGate" asp-action="EditPage">Pages</a></li>
-        <li><a asp-area="" asp-controller="MainGate" asp-action="EditGallery">Galleries</a></li>
+        <li><a asp-area="" asp-controller="MainGate" asp-action="ListGalleries">Galleries</a></li>
         <li><a asp-area="" asp-controller="MainGate" asp-action="ListMediaItems">Media Items</a></li>
     </ul>
 </aside>
