Finish splitting list and edit capabilities. Clean up some stuff. Utter vagueness

--- a/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
+++ b/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
@@ -5,7 +5,7 @@
 <h1>Clozer Woods Main Gate - @ViewData["Title"]</h1>
 <aside class="rounded">
     <ul>
-        <li><a asp-area="" asp-controller="MainGate" asp-action="EditPage">Pages</a></li>
+        <li><a asp-area="" asp-controller="MainGate" asp-action="ListPages">Pages</a></li>
         <li><a asp-area="" asp-controller="MainGate" asp-action="ListGalleries">Galleries</a></li>
         <li><a asp-area="" asp-controller="MainGate" asp-action="ListMediaItems">Media Items</a></li>
     </ul>
