--- a/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
+++ b/ClozerWoods/Views/Shared/_DashboardLayout.cshtml
@@ -11,9 +11,9 @@
     </ul>
 </aside>
 
-<content class="rounded">
+<article class="rounded">
 @RenderBody()
-</content>
+</article>
 
 @section scripts {
     <script src="~/js/main.js" asp-append-version="true"></script>
