--- a/ClozerWoods/wwwroot/css/site.css
+++ b/ClozerWoods/wwwroot/css/site.css
@@ -233,6 +233,15 @@ ul.no-bullet, ul.no-bullet ul {
     padding-left: 20px;
     list-style-type: none;
 }
+
 ul.no-bullet li {
     padding: 4px 0;
+}
+
+article h1 {
+    font-size: 160%;
+}
+
+article h2 {
+    font-size: 120%;
 }
