--- a/ClozerWoods/wwwroot/css/site.css
+++ b/ClozerWoods/wwwroot/css/site.css
@@ -195,6 +195,13 @@ form .thumbPreview {
 
 
 
+/* PAGE EDIT TOOLBAR */
+.tool:hover {
+    cursor: pointer;
+}
+
+
+
 /* GRID CONTROLS */
 p.notice {
     border: 1px solid #b57979;
@@ -244,4 +251,46 @@ article h1 {
 
 article h2 {
     font-size: 120%;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
+}
+
+
+
+/* MODALS */
+#modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+#modal-container {
+    position: absolute;
+    z-index: 10000;
+    background-color: #ffffff;
+    border: var(--border-style);
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
+}
+
+#modal-container #modal-close {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    width: 16px;
+    height: 16px;
+    background: url('../images/icon-close.gif');
+}
+
+#modal-container #modal-close:hover {
+    cursor: pointer;
 }
