--- a/ClozerWoods/wwwroot/css/site.css
+++ b/ClozerWoods/wwwroot/css/site.css
@@ -266,6 +266,7 @@ article h2 {
 
 /* MODALS */
 #modal-overlay {
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -367,4 +368,25 @@ article h2 {
 
 #formatting-guide code {
     font-size: 120%;
+}
+
+/* INSERT MEDIA ITEM */
+#media-item-grid {
+    width: 1100px;
+    display: grid;
+    gap: 16px;
+    /* grid-auto-rows: minmax(20px, auto); */
+    grid-template-columns: repeat(3, 350px);
+}
+
+#media-item-grid > div {
+    background: #eee;
+    padding: 3px;
+    text-align: center;
+    border-radius: 6px;
+}
+
+#media-item-grid > div img {
+    border: 1px solid #000000;
+    cursor: pointer;
 }
