--- a/ClozerWoods/wwwroot/css/site.css
+++ b/ClozerWoods/wwwroot/css/site.css
@@ -371,6 +371,30 @@ article h2 {
 }
 
 /* INSERT MEDIA ITEM */
+#insert-media {
+    position: relative;
+}
+
+#clipboard-notice {
+    position: absolute;
+    padding: 10px;
+    border: 1px solid #000000;
+    background-color: #fff204;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#clipboard-notice.visible {
+    visibility: visible;
+    opacity: 1;
+}
+
+#clipboard-notice.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 6s, opacity 4s ease-out 2s;
+}
+
 #media-item-grid {
     width: 1100px;
     display: grid;
